--- a/lab3.html
+++ b/lab3.html
@@ -438,7 +438,7 @@
                         userRow += "</tr>";
                         var content = headerContent + userRow + "</table>";
                         document.getElementById("divShowProjects").innerHTML = content;
-                        alert("Course succesfully added!");
+                        alert("Project succesfully added!");
                         document.getElementById("frmProjReg").reset();
                         count++;
                         getId();
