--- a/lab4.html
+++ b/lab4.html
@@ -349,7 +349,7 @@
                                 userRow += "</tr>";
                                 var content = headerContent + userRow + "</table>";
                                 document.getElementById("divShowMovies").innerHTML = content;
-                                alert("Course succesfully added!");
+                                alert("Movie succesfully added!");
                                 document.getElementById("frmMovReg").reset();
                                 count++;
                             }
