--- a/lab4.html
+++ b/lab4.html
@@ -85,7 +85,7 @@
 </head>
 <body>
     <center>
-        <form id="frmMovReg" name="frmMovReg">
+        <form id="frmMovReg" name="frmMovReg" method="post" action="">
             <table class="box">
                 <tr>
                     <td colspan="3" class="commonHeader">
@@ -183,10 +183,10 @@
                 </tr>
             </table>
         </form>
+        <table>
+            <div id="divShowMovies"></div>
+        </table>
     </center>
-    <table>
-        <div id="divShowMovies"></div>
-    </table>
 </body>
 </html>
 
