--- a/lab5.html
+++ b/lab5.html
@@ -131,7 +131,7 @@
                 </tr>
                 <tr>
                     <td colspan="3" align="center" valign="center">
-                        <button class="buttons" onclick="cheeckAllInput()">Add</button>
+                        <button type="button" class="buttons" onclick="cheeckAllInput()">Add</button>
                         <button type="reset" class="buttons">Cancel</button>
                     </td>
                 </tr>
