--- a/lab4.html
+++ b/lab4.html
@@ -177,7 +177,7 @@
                 </tr>
                 <tr>
                     <td colspan="3" align="center" valign="center">
-                        <button class="buttons" onclick="checkAllInput()">Add</button>
+                        <button type="button" class="buttons" onclick="checkAllInput()">Add</button>
                         <button type="reset" class="buttons">Cancel</button>
                     </td>
                 </tr>
