--- a/lab6.html
+++ b/lab6.html
@@ -175,7 +175,7 @@
                 </tr>
                 <tr>
                     <td colspan="3" align="center" valign="center">
-                        <button class="buttons button1" onclick="cheeckAllInput()">Register</button>
+                        <button type="button" class="buttons button1" onclick="cheeckAllInput()">Register</button>
                         <button type="reset" class="buttons button1">Cancel</button>
                     </td>
                 </tr>
