--- a/lab3.html
+++ b/lab3.html
@@ -183,7 +183,7 @@
           </table>
         </form>
         <table>
-        <div id="divShowProjects"></div>
+        <div id="divShowProjects" style="margin:25px;"></div>
       </table>
       </center>
 </body>
@@ -423,7 +423,7 @@
                         var projLead = document.getElementById("txtProjLead").value;
                         var leadStartDate = document.getElementById("leadStartDate").value;
                         var leadEndDate = document.getElementById("leadEndDate").value;
-
+                        console.log(leadEndDate);
                         userRow += "<tr>";
                         userRow += "<td align=center valign=center class=commonCell>" + count + "</td>";
                         userRow += "<td align=center valign=center class=commonCell>" + pid + "</td>";
