--- a/lab4.html
+++ b/lab4.html
@@ -184,7 +184,7 @@
             </table>
         </form>
         <table>
-            <div id="divShowMovies"></div>
+            <div id="divShowMovies" style="margin:25px;"></div>
         </table>
     </center>
 </body>
