--- a/lab6.html
+++ b/lab6.html
@@ -183,7 +183,7 @@
         </form>
     </center>
     <table>
-        <div id="divShowSchemes"></div>
+        <div id="divShowSchemes" style="margin: 25px;"></div>
     </table>
 </body>
 </html>
@@ -251,6 +251,7 @@
         } else {
             document.getElementById("divSchemeType").innerHTML = "<img src=tick.jpg>";
             document.getElementById("optSchemeType").className = "commonInput";
+            flagSchemeType = true;
         }
     }
 
