--- a/os.html
+++ b/os.html
@@ -1,8 +1,8 @@
 <select id="optmoduleid" name="optmoduleid" class="commonInput" onblur="checkData(this)">
     <option value='M00000000020'>Introduction</option>
-    <option value=''M00000000021'>Processes</option>
-    <option value=''M00000000022'>Inter-process Communication</option>
-    <option value=''M00000000023'>Deadlocks</option>
-    <option value=''M00000000024'>Memory Management</option>
-    <option value=''M00000000025'>I/O Hardware</option>
+    <option value='M00000000021'>Processes</option>
+    <option value='M00000000022'>Inter-process Communication</option>
+    <option value='M00000000023'>Deadlocks</option>
+    <option value='M00000000024'>Memory Management</option>
+    <option value='M00000000025'>I/O Hardware</option>
 </select>
