--- a/lab7.html
+++ b/lab7.html
@@ -8,21 +8,21 @@
 </head>
 <style type="text/css">
     .commonHeader{
-        font-family: calibri;
-        font-size: large;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 25px;
         font-weight: bold;
         text-align: center;
         margin: 5px;
-        color: midnightblue;
+        color: black;
     }
     .commonLabel{
-        font-family: calibri;
+        font-family: Arial, Helvetica, sans-serif;
         font-size: medium;
         font-weight: bold;
         text-align: right;
         margin: 5px;
         padding: 5px;
-        color: midnightblue;
+        color: black;
     }
     .commonInput{
         font-family: calibri;
@@ -93,7 +93,7 @@
             <table class="box">
                 <tr>
                     <td colspan="3" class="commonHeader">
-                        <h2>Product Model Registration</h2>
+                        Product Model Registration
                     </td>
                 </tr>
                 <tr>
